# gitroto

./: README.md  pyproject.toml
src/github/: authorization.py  key_management.py  key_management_test.py  key_manager.py  key_manager_documentdb.py  key_manager_test.py  keys.py  proxy.py
src/server/: app.py
src/utils/: README.md  key_management.py
