[project]
name = "_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Mark Lee", email="mark.lee@databricks.com" },
]
description = "A package to rotate Git Deploy Keys"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brickmeister/gitroto"
"Bug Tracker" = "https://github.com/brickmeister/gitroto/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"